Fri Nov 18 00:37:13 1994  Mark Eichin  <eichin@cygnus.com>

	* configure.in: use WITH_KRB4. (from epeisach)

Mon Nov 14 16:27:29 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kerberos.c (kerberos4_is): Initialize random number generator on
		the server side so that the encryption routines later on
		can use it. 

	* kerberos.c (kerberos4_send): Fix bug in how we pick the
		challenge for the challenge/response mutual
		authentication.

Fri Nov 11 00:55:36 1994  Theodore Y. Ts'o  (tytso@dcl)

	* forward.c (mk_cred, rd_cred): Move these routines to libkrb.a.

Tue Nov  8 01:39:50 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kerberos.c (kerberos4_is): Fix bug in logic of incrementing the
		received challenge.  A ++/-- mixup means there's a 1 in
		256 chance the server will get it wrong.

	* kerberos.c: Use des_init_random_number_genator(), since that
		will result in different subsession keys on successive
		runs of telnet.

Mon Nov  7 22:36:20 1994  Theodore Y. Ts'o  (tytso@dcl)

	* auth.c (auth_status): Only print each possible authentication
		type once in the status report.

	* auth.c (auth_onoff): Remove excess call to getauthmask() which
		stomped the mask field.  Only print each possible
		authentication type once in the help message.

	* auth.c (getauthmask): Fix reversed sense of strcasecmp
		comparison.

	* auth.c (auth_enable, auth_disable): Change the input type to be
		a char *, which is what auth_onoff wants anyway.

Mon Aug  8 22:16:54 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* kerberos5.c (kerberos5_send): Whoops, mispelled
	krb5_copy_keyblock_contents().  (It was inside #ifdef
	ENCRYPTION)

Thu Aug  4 03:36:29 1994  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in: add blank target for install

Tue Jul 26 18:21:29 1994  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in: whoops left out some $(srcdir) stuff

Mon Jul 25 01:05:31 1994  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in: remove reference to lorder (linux doesn't have
	lorder, it seems)
